refactor script starting; add no js messaging to start of game if needed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 		</header>
 		<div id="container">
 			<div id="scroll">
-				<p class="intro">
-					Welcome new comer,<br/>
-					you come to this land from a far away place to settle, cultivate, and dominate.  You live in a small prospector shack that barely protects you from the wild and you will not survive the winter unless you build a home.  Secure water, food and fire to build a small house and start your homestead. Find resources, make tools and items to trade.
-				</p>
-				<button id="beginJourney">Begin your journey</button>
+				<p class="intro">Welcome new comer,</p>
+				<p>We know youve traved a great distance to come here today but unfortunately your browser does not meet our requirements to play.</p>
+				<p>Please enable JavaScript or try <a href="https://browsehappy.com/">upgrading your browser</a> to something newer.</p>
 			</div>
 		</div>
-		<script src="field.js"></script>
+		<script src="functions.js"></script>
 	</body>
 </html>
